--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,16 @@
 name: bayopt
 channels:
-  - pytorch
   - conda-forge
+  - pytorch
   - anaconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - backcall=0.2.0=py_0
   - blas=1.0=mkl
   - brotlipy=0.7.0=py38h7b6447c_1000
-  - ca-certificates=2020.12.5=ha878542_0
-  - certifi=2020.12.5=py38h578d9bd_1
+  - ca-certificates=2020.10.14=0
+  - certifi=2020.6.20=py38_0
   - cffi=1.14.3=py38he30daa8_0
   - chardet=3.0.4=py38_1003
   - cpuonly=1.0=0
@@ -28,7 +29,13 @@ dependencies:
   - icu=58.2=he6710b0_3
   - idna=2.10=py_0
   - intel-openmp=2020.2=254
+  - ipykernel=5.3.4=py38h5ca1d4c_0
+  - ipython=7.18.1=py38h5ca1d4c_0
+  - ipython_genutils=0.2.0=py38_0
+  - jedi=0.18.0=py38h06a4308_1
   - jpeg=9b=h024ee3a_2
+  - jupyter_client=6.1.7=py_0
+  - jupyter_core=4.6.3=py38_0
   - kiwisolver=1.3.1=py38h82cb98a_0
   - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
@@ -38,6 +45,7 @@ dependencies:
   - libgfortran-ng=7.5.0=h14aa051_18
   - libgfortran4=7.5.0=h14aa051_18
   - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=h2733197_1
   - libuuid=1.0.3=h1bed415_2
@@ -56,12 +64,18 @@ dependencies:
   - numpy=1.19.2=py38h54aff64_0
   - numpy-base=1.19.2=py38hfa32c7d_0
   - olefile=0.46=py_0
-  - openssl=1.1.1i=h27cfd23_0
+  - openssl=1.1.1h=h7b6447c_0
   - paramz=0.9.5=py_0
+  - parso=0.8.0=py_0
   - pcre=8.44=he6710b0_0
+  - pexpect=4.8.0=py38_0
+  - pickleshare=0.7.5=py38_1000
   - pillow=8.1.0=py38he98fc37_0
   - pip=20.3.3=py38h06a4308_0
+  - prompt-toolkit=3.0.8=py_0
+  - ptyprocess=0.6.0=py38_0
   - pycparser=2.20=py_2
+  - pygments=2.7.1=py_0
   - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.7=pyh9f0ad1d_0
   - pyqt=5.9.2=py38h05f1152_4
@@ -70,6 +84,7 @@ dependencies:
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
   - pytorch=1.7.1=py3.8_cpu_0
+  - pyzmq=19.0.2=py38he6710b0_1
   - qt=5.9.7=h5867ecd_1
   - readline=8.1=h27cfd23_0
   - requests=2.24.0=py_0
@@ -82,10 +97,13 @@ dependencies:
   - torchaudio=0.7.2=py38
   - torchvision=0.8.2=py38_cpu
   - tornado=6.1=py38h25fe258_0
+  - traitlets=5.0.5=py_0
   - typing_extensions=3.7.4.3=pyh06a4308_0
   - urllib3=1.25.11=py_0
+  - wcwidth=0.2.5=py_0
   - wheel=0.36.2=pyhd3eb1b0_0
   - xz=5.2.5=h7b6447c_0
+  - zeromq=4.3.3=he6710b0_3
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.4.5=h9ceee32_0
 prefix: /opt/anaconda/envs/bayopt
